<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- Title -->
    <TextView
        android:id="@+id/tvTitle"
        style="@style/OnbTitle"
        android:text="@string/onb3_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/onb_margin_top"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Description -->
    <TextView
        android:id="@+id/tvDesc"
        style="@style/OnbBody"
        android:text="@string/onb3_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/onb_space_title_desc"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Hero (fills width like Figma) -->
    <ImageView
        android:id="@+id/imgHero"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/onb_03"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@id/tvDesc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent="1.0"
        app:layout_constraintHeight_default="wrap" />

    <!-- Next (bottom-right, 48dp) -->
    <ImageButton
        android:id="@+id/btnNext"
        android:layout_width="@dimen/onb_btn_size"
        android:layout_height="@dimen/onb_btn_size"
        android:src="@drawable/arrow_button"
        android:contentDescription="@string/cd_next"
        android:background="@android:color/transparent"
        android:layout_margin="@dimen/onb_edge_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
